fix: a small bug with postgres auto-scaling

--- a/charts/auth-service/dependency_chart/postgresql/values.yaml
+++ b/charts/auth-service/dependency_chart/postgresql/values.yaml
@@ -30,3 +30,9 @@ serviceAccount:
   create: true
   annotations: {}
   name: ""
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
