--- a/charts/auth-service/dependency_chart/postgresql/templates/deployment.yaml
+++ b/charts/auth-service/dependency_chart/postgresql/templates/deployment.yaml
@@ -57,7 +57,7 @@ spec:
         {{- end }}
         - name: config
           configMap:
-            name: {{ .Release.Name }}-configmap
+            name: {{ .Release.Name }}-postgres-configmap
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
