--- a/charts/postgresql/templates/backupcron.yaml
+++ b/charts/postgresql/templates/backupcron.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: postgres-backup
 spec:
-  schedule: "0 * * * *"
+  schedule: {{ .Values.storage.scriptFrequency }}
   jobTemplate:
     spec:
       template:
@@ -16,7 +16,7 @@ spec:
             command:
             - /bin/sh
             - -c
-            - curl https://raw.githubusercontent.com/htaic/helm-charts/faux-auth-backup-restore-cron/charts/postgresql/dumpdb.sh -o dumpdb.sh && ./dumpdb.sh
+            - apt update && apt upgrade && apt install -y curl && curl {{ .Values.storage.scriptPath }} -o {{ .Values.storage.volumeMountPath }}/dumpdb.sh && chmod +x {{ .Values.storage.volumeMountPath }}/dumpdb.sh && {{ .Values.storage.volumeMountPath }}/dumpdb.sh
             envFrom:
             - secretRef:
                 name: "{{ include ".helm.fullname" . }}-secret"
