Faux auth backup restore cron (#21)
* fix: new postgres chart is functional

--- a/charts/baseline/Chart.yaml
+++ b/charts/baseline/Chart.yaml
@@ -43,8 +43,9 @@ dependencies:
   repository: "https://htaic.github.io/helm-charts"
 # the auth service back end
 - name: faux-auth-service
-  version: "0.0.5"
+  version: "0.0.6"
   repository: "https://htaic.github.io/helm-charts"
+# send logs out to open search
 - name: filebeat
   version: "7.12.1"
   repository: https://helm.elastic.co
