--- a/charts/faux-auth-service/Chart.yaml
+++ b/charts/faux-auth-service/Chart.yaml
@@ -15,8 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.6
-
+version: 0.0.7
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -30,8 +29,8 @@ appVersion: "0.0.1"
 # https://artifacthub.io/packages/helm/bitnami/postgresql
 dependencies:
 - name: postgresql
-  version: "0.0.6"
-  repository: "file://./dependency_chart/postgresql"
+  version: "0.1.0"
+  repository: "https://htaic.github.io/helm-charts"
 - name: hasura
   version: "0.0.6"
   repository: "file://./dependency_chart/hasura"
