test: changing script and env vars

--- a/charts/postgresql/templates/secret-configmap.yaml
+++ b/charts/postgresql/templates/secret-configmap.yaml
@@ -3,4 +3,5 @@ kind: ConfigMap
 metadata:
   name: "{{ .Chart.Name }}-configmap"
 data:
-  POSTGRES_DB: {{ include ".helm.fullname" . }}
+  POSTGRES_HOSTNAME: {{ include ".helm.fullname" . }}
+  POSTGRES_DB: {{ .Values.postgres.db }}
