--- a/charts/baseline/Chart.yaml
+++ b/charts/baseline/Chart.yaml
@@ -44,7 +44,8 @@ dependencies:
 # the auth service back end
 - name: faux-auth-service
   version: "0.0.9"
-  repository: "https://htaic.github.io/helm-charts"
+  # repository: "https://htaic.github.io/helm-charts"
+  repository: "file://../faux-auth-service"
 # send logs out to open search
 - name: filebeat
   version: "7.12.1"
