--- a/charts/postgresql/templates/backupcron.yaml
+++ b/charts/postgresql/templates/backupcron.yaml
@@ -18,7 +18,7 @@ spec:
             command:
             - /bin/sh
             - -c
-            - apt update && apt upgrade && apt install -y curl && curl {{ .Values.storage.scriptPath }} > {{ .Values.storage.volumeMountPath }}/dumpdb.sh && chmod +x {{ .Values.storage.volumeMountPath }}/dumpdb.sh && {{ .Values.storage.volumeMountPath }}/dumpdb.sh
+            - apt update && apt upgrade && apt install -y curl postgresql-client && curl {{ .Values.storage.scriptPath }} > {{ .Values.storage.volumeMountPath }}/dumpdb.sh && chmod +x {{ .Values.storage.volumeMountPath }}/dumpdb.sh && {{ .Values.storage.volumeMountPath }}/dumpdb.sh
             envFrom:
             - secretRef:
                 name: "{{ include ".helm.fullname" . }}-secret"
