IA-16 fixed a couple of small issues in routing

--- a/charts/auth-service/dependency_chart/postgresql/templates/configmap.yaml
+++ b/charts/auth-service/dependency_chart/postgresql/templates/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ .Release.Name }}-postgres-configmap
 data:
   configdata.sql: |
-{{ .values.postgresOverride | indent 4 }}
+{{ .Values.postgresOverride | indent 4 }}
