--- a/charts/postgresql/templates/startup-config.yaml
+++ b/charts/postgresql/templates/startup-config.yaml
@@ -4,6 +4,12 @@ kind: ConfigMap
 metadata:
   name: "{{ include ".helm.fullname" . }}-startup"
 data:
+  {{- if (hasKey .Values.startUp "fileContent") }}
   configdata.sql: |
 {{ .Values.startUp.fileContent | indent 4 }}
+  {{- end }}
+  {{- if (hasKey .Values.startUp "scriptContent") }}
+  configdata.sh: |
+{{ .Values.startUp.scriptContent | indent 4 }}
+  {{- end }}
 {{- end }}
