Fix dump script (#29)
* fix: update dump

--- a/charts/postgresql/values.yaml.Example
+++ b/charts/postgresql/values.yaml.Example
@@ -1,6 +1,7 @@
 postgres:
   user: postgres
   password: postgrespassword
+  db: postgres
   replicaCount: 1
   repository: postgres
   tag: 14
@@ -28,6 +29,8 @@ postgres:
 
 # # Optional (should be passed in from parent chart... if you want to run a startup script, enter it here)
 # startUp:
+#   scriptContent: |
+#       echo "I am a little tea pot" > /data/echotxt
 #   fileContent: |
 #       SELECT 'CREATE DATABASE ory '
 #       'WITH '
