--- a/charts/faux-auth-service/Chart.yaml
+++ b/charts/faux-auth-service/Chart.yaml
@@ -30,8 +30,8 @@ appVersion: "0.0.1"
 dependencies:
 - name: postgresql
   version: "0.1.1"
-  # repository: "https://htaic.github.io/helm-charts"
-  repository: "file://../postgresql"
+  repository: "https://htaic.github.io/helm-charts"
+  # repository: "file://../postgresql"
 - name: hasura
   version: "0.0.6"
   repository: "file://./dependency_chart/hasura"
