--- a/charts/auth-service/Chart.yaml
+++ b/charts/auth-service/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.4
+version: 0.1.5
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -27,8 +27,9 @@ appVersion: "0.0.1"
 
 dependencies:
 - name: postgresql
-  version: "0.0.4"
-  repository: "file://./dependency_chart/postgresql"
+  version: "0.1.2"
+  repository: "https://htaic.github.io/helm-charts"
+  # repository: "file://./dependency_chart/postgresql"
 - name: oathkeeper
   version: "0.25.6"
   repository: "https://k8s.ory.sh/helm/charts"
