--- a/charts/auth-service/templates/ingressroute.yaml
+++ b/charts/auth-service/templates/ingressroute.yaml
@@ -9,7 +9,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: (Path("/{{ .Values.image.domainPath }}/{path:(login||realms/detect||logout)}"))
+      match: (Path("/{{ .Values.image.domainPath }}/{path:(login||realms/detect||logout||api||api-json)}"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
