--- a/charts/org-service/values.yaml.Example
+++ b/charts/org-service/values.yaml.Example
@@ -1,63 +1,108 @@
 fullnameOverride: "org-service"
+enableTraefikDashboard: true
 
-image:
-  replicaCount: 1
-  repository: ghcr.io/htaic/org-management-services
-  pullPolicy: Always
-  containerPort: 3000
-  tag: "latest"
-  hostname: auth
-  # livenessProbe: "api/v1/livez"
-  # readinessProbe: "api/v1/readyz"
-  domainPath: "customer"
-  env:
-    - name: DATABASE_HOST
-      value: baseline-auth-service-postgresql
-    - name: DATABASE_USER
-      value: postgres
-    - name: DATABASE_PASSWORD
-      value: postgrespassword
-    - name: DATABASE_NAME
-      value: auth
-    - name: ORY_KRATOS_BASE_ADMIN_URL
-      value: http://baseline-auth-service-kratos-admin
-    - name: ORY_KRATOS_BASE_PUBLIC_URL
-      value: http://baseline-auth-service-kratos-public
-    # - name: OPERATION_ENV
-    #   value: "edge"
-sidecarimage:
-  name: "logging-sidecar"
-  repository: ghcr.io/htaic/platform-logging-service
-  pullPolicy: Always
-  tag: "latest"
-imagePullSecrets:
-  - name: dockerconfigjson-github-com
-service:
-  type: ClusterIP
-resources:
-  requests:
-    cpu: 250m
-    memory: 750Mi
-serviceAccount:
-  create: false
-  annotations: {}
-  name: ""
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+# https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml
+traefik:
+  image:
+    pullPolicy: Always
 
-# file://./dependency_chart/postgres
-postgresql:
-  namespace: "hanwha"
-  postgres:
+org-service:
+  image:
+    replicaCount: 1
+    repository: ghcr.io/htaic/org-management-services
+    pullPolicy: Always
+    containerPort: 3000
+    tag: "1667930068"
+    hostname: 
+    domainPath: "customer"
     env:
-      - name: POSTGRES_PASSWORD
-        value: postgrespassword
-  # # To enable EFS on the cluster, use the following values in the root helm chart
-  # storage:
-  #   className: efs-storageclass
-  #   claimName: postgres-claim
-  #   claimSize: 5Gi
-  
+      - name: DATABASE_HOST
+        value: baseline-postgresql
+      - name: DATABASE_USER
+        value: auth_service
+      - name: DATABASE_PASSWORD
+        value: r4tuQcp0CQ9pgH0Sv30iQZ
+      - name: DATABASE_NAME
+        value: auth
+      - name: ORY_KRATOS_BASE_ADMIN_URL
+        value: http://baseline-kratos-admin
+      - name: ORY_KRATOS_BASE_PUBLIC_URL
+        value: http://baseline-kratos-public
+      - name: ORY_KETO_BASE_READ_URL
+        value: http://baseline-keto-read
+      - name: ORY_KETO_BASE_WRITE_URL
+        value: http://baseline-keto-write
+      - name: AWS_REGION
+        value: us-west-2
+      - name: AWS_ACCOUNT
+        value: "409642236539"
+      - name: PRODUCER_QUEUE
+        value: sqs-isaas-auth-test-auth-services-uw2-001
+      - name: CONSUMER_QUEUE
+        value: sqs-isaas-auth-test-auth-services-uw2-002
+  ## TODO: Enable this once we incorporate it
+  # sidecarimage:
+  #   name: "logging-sidecar"
+  #   repository: ghcr.io/htaic/platform-logging-service
+  #   pullPolicy: Always
+  #   tag: "latest"
+  imagePullSecrets:
+    - name: dockerconfigjson-github-com
+  service:
+    type: ClusterIP
+  resources:
+    requests:
+      cpu: 250m
+      memory: 750Mi
+  # serviceAccount:
+  #   name: "auth"
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+  postgresql:
+    service:
+      type: ClusterIP
+    resources:
+      requests:
+        cpu: 250m
+        memory: 750Mi
+    serviceAccount:
+      create: false
+      annotations: {}
+      name: ""
+    autoscaling:
+      enabled: false
+      minReplicas: 1
+      maxReplicas: 100
+      targetCPUUtilizationPercentage: 80
+    postgres:
+      user: postgres
+      password: aeTbAJrh9LaMbsLFTUhLwFdwH
+      db: postgres
+      replicaCount: 1
+      repository: postgres
+      tag: 14
+      pullPolicy: Always
+      containerPort: 5432
+      env:
+        # https://hub.docker.com/_/postgres
+        - name: PGDATA
+          value: /var/lib/postgresql/data/pgdata # # To enable EFS on the cluster, use the following values in the root helm chart
+    storage:
+      className: efs-storageclass
+      provisioner: efs.csi.aws.com
+      capacity: 20Gi
+      volumeMode: Filesystem
+      csi:
+        volumeHandle: fs-03fef9b1995888177
+        volumeAttributes:
+          encryptInTransit: "true"
+      # If you want to run cron backups to the volume, use these settings
+      scriptPath: https://raw.githubusercontent.com/htaic/helm-charts/faux-auth-backup-restore-cron/charts/postgresql/dumpdb.sh
+      # if you want to persist data without using backups use the PGDATA path from the postgres node
+      volumeMountPath: /var/lib/postgresql/data/pgdata
+    startUp:
+      fileContent: 
+        
