IA-77 making sure the /api prefix is open to see the swagger UI

--- a/charts/auth-service/templates/ingressroute.yaml
+++ b/charts/auth-service/templates/ingressroute.yaml
@@ -9,7 +9,17 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: (Path("/{{ .Values.image.domainPath }}/{path:(login||realms/detect||logout||api(-json)?)}"))
+      match: (Path("/{{ .Values.image.domainPath }}/{path:(login||realms/detect||logout||api-json)}"))
+      services:
+        - name: {{ include ".helm.fullname" . }}
+          kind: Service
+          port: {{ .Values.image.containerPort }}
+      {{ if (not (hasKey .Values.image "noStripPath")) }}
+      middlewares:
+      - name: "{{ include ".helm.fullname" . }}-strip"
+      {{ end }}
+    - kind: Rule
+      match: (PathPrefix("/{{ .Values.image.domainPath }}/api"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
