--- a/charts/org-service/templates/deployment.yaml
+++ b/charts/org-service/templates/deployment.yaml
@@ -6,8 +6,8 @@ metadata:
   labels:
     {{- include ".helm.labels" . | nindent 4 }}
 spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.image.replicaCount }}
+  {{- if not ((.Values.autoscaling).enabled) }}
+  replicas: {{ ((.Values.image).replicaCount) }}
   {{- end }}
   selector:
     matchLabels:
