--- a/charts/org-service/templates/ingressroute.yaml
+++ b/charts/org-service/templates/ingressroute.yaml
@@ -1,4 +1,4 @@
-{{ if and (ne .Values.image.domainPath "") (hasKey .Values.image "domainPath") }}
+{{- if ((.Values.image).domainPath) -}}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
