--- a/charts/postgresql/templates/secret-configmap.yaml
+++ b/charts/postgresql/templates/secret-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: "{{ .Chart.Name }}-configmap"
+  name: "{{ .Release.Name }}-configmap"
 data:
   POSTGRES_HOSTNAME: {{ include ".helm.fullname" . }}
   POSTGRES_DB: {{ .Values.postgres.db }}
