--- a/charts/postgresql/templates/deployment.yaml
+++ b/charts/postgresql/templates/deployment.yaml
@@ -48,20 +48,20 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-          {{- if .Values.storage }}
-          - name: postgres-vol
-            mountPath: {{ .Values.storage.volumeMountPath }}
-          {{- end }}
+          # {{- if .Values.storage }}
+          # - name: postgres-vol
+          #   mountPath: {{ .Values.storage.volumeMountPath }}
+          # {{- end }}
           {{- if .Values.startUp }}
           - name: config
             mountPath: /docker-entrypoint-initdb.d
           {{- end }}
       volumes:
-        {{- if .Values.storage }}
-        - name: postgres-vol
-          persistentVolumeClaim:
-            claimName: "{{ include ".helm.fullname" . }}-claim"
-        {{- end }}
+        # {{- if .Values.storage }}
+        # - name: postgres-vol
+        #   persistentVolumeClaim:
+        #     claimName: "{{ include ".helm.fullname" . }}-claim"
+        # {{- end }}
         {{- if .Values.startUp }}
         - name: config
           configMap:
