--- a/charts/baseline-ory/Chart.yaml
+++ b/charts/baseline-ory/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.3
+version: 0.0.4
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -43,5 +43,5 @@ dependencies:
     repository: "https://htaic.github.io/helm-charts"
   # the auth service back end
   - name: auth-service
-    version: "0.1.8"
+    # version: "0.1.9"
     repository: "https://htaic.github.io/helm-charts"
