chore: update psql for multiple instances

--- a/charts/postgresql/templates/pv.yaml
+++ b/charts/postgresql/templates/pv.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.storage }}
+{{- if and .Values.storage (not (hasKey .Values.storage "disableCreate")) }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
