--- a/charts/org-service/Chart.yaml
+++ b/charts/org-service/Chart.yaml
@@ -27,8 +27,9 @@ appVersion: "0.0.2"
 
 dependencies:
 - name: postgresql
-  version: "0.1.3"
-  repository: "https://htaic.github.io/helm-charts"
+  version: "0.1.7"
+  # repository: "https://htaic.github.io/helm-charts"
+  repository: "file://../postgresql"
 
   
 
