--- a/charts/postgresql/templates/deployment.yaml
+++ b/charts/postgresql/templates/deployment.yaml
@@ -60,7 +60,11 @@ spec:
         {{- if .Values.storage }}
         - name: postgres-vol
           persistentVolumeClaim:
+            {{- if .Values.storage.disableCreate }}
+            claimName: "{{ .Values.storage.claimName }}"
+            {{ else }}
             claimName: "{{ include ".helm.fullname" . }}-claim"
+            {{- end }}
         {{- end }}
         {{- if .Values.startUp }}
         - name: config
