fix: add ingress for org back end

--- a/charts/organization-frontend/Chart.yaml
+++ b/charts/organization-frontend/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.1
+version: 0.0.2
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -27,10 +27,10 @@ appVersion: "0.0.1"
 
 dependencies:
 - name: organization-creation
-  version: "0.0.1"
+  version: "^0"
   repository: "file://./charts/organization-creation"
 - name: organization-backend
-  version: "0.0.1"
+  version: "^0"
   repository: "file://./charts/organization-backend"
 
   
