Exposing org-service's swagger endpoint

--- a/charts/org-service/templates/ingressroute.yaml
+++ b/charts/org-service/templates/ingressroute.yaml
@@ -9,7 +9,7 @@ spec:
     - web
   routes:
     - kind: Rule
-      match: (Path("/{{ .Values.image.domainPath }}/api-json"))
+      match: (PathPrefix("/{{ .Values.image.domainPath }}/api"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
@@ -24,8 +24,7 @@ spec:
           kind: Service
           port: {{ .Values.image.containerPort }}
       middlewares:
+      - name: "{{ include ".helm.fullname" . }}-headers"
       - name: "{{ include ".helm.fullname" . }}-forward-auth"
-      {{ if (not (hasKey .Values.image "noStripPath")) }}
       - name: "{{ include ".helm.fullname" . }}-strip"
-      {{ end }}
 {{ end }}
