--- a/charts/edge-services/charts/scs/Chart.yaml
+++ b/charts/edge-services/charts/scs/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: edge-background-service
+name: scs
 description: A dependent Helm chart for Kubernetes micro auth services
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,24 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.8
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
-
-dependencies:
-  - name: redis
-    version: "^0"
-    repository: "https://htaic.github.io/helm-charts"
-  - name: dcs
-    version: "0.0.1"
-    repository: "file://./charts/dcs"
-  - name: edgeccs
-    version: "0.0.1"
-    repository: "file://./charts/edgeccs"
-  - name: keymanager
-    version: "0.0.1"
-    repository: "file://./charts/keymanager"
