updating the selector to match scs deployment

--- a/charts/edge-services/charts/scs/templates/service.yaml
+++ b/charts/edge-services/charts/scs/templates/service.yaml
@@ -13,4 +13,4 @@ spec:
       port: {{ .Values.scs.containerPort }}
       targetPort: {{ .Values.scs.containerPort }}
   selector:
-    app: scs
+    app.kubernetes.io/name: scs
