--- a/charts/edge-services/Chart.yaml
+++ b/charts/edge-services/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.2
+version: 0.0.3
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -25,6 +25,9 @@ appVersion: "0.0.1"
 
 dependencies:
   - name: redis
+    version: "^0"
+    repository: "https://htaic.github.io/helm-charts"
+  - name: postgresql
     version: "^0"
     repository: "https://htaic.github.io/helm-charts"
   - name: dcs
