--- a/charts/edge-services/values.yaml
+++ b/charts/edge-services/values.yaml
@@ -21,3 +21,33 @@ redis:
     minReplicas: 1
     maxReplicas: 100
     targetCPUUtilizationPercentage: 80
+
+postgresql:
+  postgres:
+    user: postgres
+    password: postgrespassword
+    db: postgres
+    replicaCount: 1
+    repository: postgres
+    tag: 14
+    pullPolicy: Always
+    containerPort: 5432
+    env:
+      # https://hub.docker.com/_/postgres
+      - name: PGDATA
+        value: /var/lib/postgresql/data/edge
+  service:
+    type: ClusterIP
+  resources:
+    requests:
+      cpu: 250m
+      memory: 750Mi
+  serviceAccount:
+    create: false
+    annotations: {}
+    name: ""
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
