test: try printf on files to do localized pathing

--- a/charts/edge-services/templates/certs-configmap.yaml
+++ b/charts/edge-services/templates/certs-configmap.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "{{ .Release.Name }}-certs"
 data:
   device.crt: |-
-{{ .Files.Get "cert/device.crt" | indent 4 }}
+{{ .Files.Get (printf "cert/device.crt") | indent 4 }}
   device.key: |-
-{{ .Files.Get "cert/device.key" | indent 4 }}
+{{ .Files.Get (printf "cert/device.key") | indent 4 }}
   secret.key: |-
-{{ .Files.Get "cert/secret.key" | indent 4 }}
+{{ .Files.Get (printf "cert/secret.key") | indent 4 }}
