fix: edge certs need to be in values file.. getfile path is helm chart relative

--- a/charts/edge-services/templates/certs-configmap.yaml
+++ b/charts/edge-services/templates/certs-configmap.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "{{ .Release.Name }}-certs"
 data:
   device.crt: |-
-{{ .Files.Get (printf "cert/device.crt") | indent 4 }}
+{{ .Values.cert.devicecrt | indent 4 }}
   device.key: |-
-{{ .Files.Get (printf "cert/device.key") | indent 4 }}
+{{ .Values.cert.devicekey | indent 4 }}
   secret.key: |-
-{{ .Files.Get (printf "cert/secret.key") | indent 4 }}
+{{ .Values.cert.secretkey | indent 4 }}
