--- a/charts/media-token-service/templates/ingressroute.yaml
+++ b/charts/media-token-service/templates/ingressroute.yaml
@@ -16,6 +16,8 @@ spec:
           port: {{ .Values.image.containerPort }}
       {{ if (not (hasKey .Values.image "noStripPath")) }}
       middlewares:
-      - name: "{{ include ".helm.fullname" . }}-strip"
+        - name: "{{ include ".helm.fullname" . }}-headers"
+        - name: "{{ include ".helm.fullname" . }}-forward-auth"
+        - name: "{{ include ".helm.fullname" . }}-strip"
       {{ end }}
 {{ end }}
