--- a/charts/auth-service/templates/ingressroute.yaml
+++ b/charts/auth-service/templates/ingressroute.yaml
@@ -18,7 +18,7 @@ spec:
       - name: "{{ include ".helm.fullname" . }}-headers"
       - name: "{{ include ".helm.fullname" . }}-strip"
     - kind: Rule
-      match: (PathPrefix("/{{ .Values.image.domainPath }}/api"))
+      match: (PathPrefix("/{{ .Values.image.domainPath }}/{path:(api||livez||readyz)}"))
       services:
         - name: {{ include ".helm.fullname" . }}
           kind: Service
