--- a/charts/role-stack/values.yaml.Example
+++ b/charts/role-stack/values.yaml.Example
@@ -1,34 +1,37 @@
 fullnameOverride: "rolesmanager"
-image:
-  replicaCount: 1
-  repository: ghcr.io/htaic/porlet-role-manager
-  pullPolicy: Always
-  containerPort: 3005
-  tag: "latest"
-  hostname: rolesmanager
-  domainPath: "roles"
-sidecarimage:
-  name: "logging-sidecar"
-  repository: ghcr.io/htaic/platform-logging-service
-  pullPolicy: Always
-  tag: "latest"
-imagePullSecrets:
-  - name: dockerconfigjson-github-com
-service:
-  type: ClusterIP
-resources:
-  requests:
-    cpu: 250m
-    memory: 750Mi
-serviceAccount:
-  create: false
-  annotations: {}
-  name: ""
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
+
+roles-frontend:
+  image:
+    replicaCount: 1
+    repository: ghcr.io/htaic/portlet-role-manager
+    pullPolicy: Always
+    containerPort: 3005
+    tag: "latest"
+    hostname: rolesmanager
+    domainPath: "roles"
+  sidecarimage:
+    name: "logging-sidecar"
+    repository: ghcr.io/htaic/platform-logging-service
+    pullPolicy: Always
+    tag: "latest"
+  imagePullSecrets:
+    - name: dockerconfigjson-github-com
+  service:
+    type: ClusterIP
+  resources:
+    requests:
+      cpu: 250m
+      memory: 750Mi
+  serviceAccount:
+    create: false
+    annotations: {}
+    name: ""
+  autoscaling:
+    enabled: false
+    minReplicas: 1
+    maxReplicas: 100
+    targetCPUUtilizationPercentage: 80
+
 roles-backend:
   image:
     replicaCount: 1
